--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Generate files
         run: hexo generate
       - name: Deploy
-        run: hexo -d
+        run: hexo d
 #      - name: Deploy
 #        uses: peaceiris/actions-gh-pages@v3
 #        with:
